Override default CodeMirror-hscrollbar.min-height, fixes #118

--- a/scss/views/docView.scss
+++ b/scss/views/docView.scss
@@ -33,7 +33,8 @@
 		padding-bottom: $editor-1l-pad-bottom;
 
 		.CodeMirror-hscrollbar {
-			@include vendor-prefix(transform, scale(1,0.5) translate(0, -0.375rem));
+			@include vendor-prefix(transform, scale(1, 0.5) translate(0, -0.375rem));
+            min-height: 0!important;
 		}
 	}
 }
